fixes for spacing on contact form and contact form buttons

--- a/css/components/forms/contact.css
+++ b/css/components/forms/contact.css
@@ -4,8 +4,18 @@
  */
 
 .contact-form {
-  margin: auto;
+  margin: auto auto 1rem;
   max-width: 600px;
+}
+@media screen and (min-width: 30rem) { /* 480px */
+  .contact-form {
+    margin-bottom: 2rem;
+  }
+}
+@media screen and (min-width: 60rem) { /* 960px */
+  .contact-form {
+    margin-bottom: 3rem;
+  }
 }
 .contact-form .form-item-copy {
   margin-bottom: 0;
@@ -13,4 +23,20 @@
 .contact-form .form-item-copy .form-checkbox {
   margin: 0 5px 0 0;
   min-width: auto;
+}
+.contact-form .form-actions {
+  display: block;
+}
+@media screen and (min-width: 30rem) { /* 480px */
+  .contact-form .form-actions {
+    display: inline-flex;
+  }
+}
+.contact-form .form-actions .button {
+  margin-left: 0;
+}
+@media screen and (min-width: 30rem) { /* 480px */
+  .contact-form .form-actions .button {
+    margin-left: 1em;
+  }
 }
